Menu fixes on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -758,32 +758,41 @@
 
     .top-bar__menuToggle--toggled
     {
-        transform:translateX(300px);
+        background-image:url(../images/menu-toggle-hide.png);
+    }
+
+    .top-bar__listHolder
+    {
+        position:absolute;
+
+        width:200px;
+        height:315px;
+        margin-top:-35px;
+        right:0;
+        
+
     }
     
     .top-bar__list
     {
-        position:absolute;
-        background-color:rgba(255,255,255,0.7);
-        box-shadow:0px 0px 8px 3px rgba(0,0,0,0.3);
+        background-color:rgba(255,255,255,0.95);
+        box-shadow:0px 5px 8px 3px rgba(0,0,0,0.3);
         float:right;
         right:0;
         top:0;
-        height:315px;
+        height:0px;
         max-width:200px;
         min-width:160px;
-        transform:translateX(300px);
         transition:all 0.5s ease-in-out;
         overflow:hidden;
         display:none;
-
-        
-
+        z-index:99;
+        position: absolute;
     }
 
     .top-bar__list--visible
     {
-        transform:translate(0px);
+        height:315px;
     }
     
     
@@ -794,7 +803,7 @@
         padding-top:15px;
         transition:all 0.3s ease-in-out;
         width:100%;
-        margin-top:15px;
+        padding-bottom:15px;
         border-top:1px solid black;
     }
 
